fixed spacing on skills section

--- a/src/style.css
+++ b/src/style.css
@@ -269,7 +269,7 @@ body {
 
 .skills {
     width: 100%;
-    padding: 50px 125px;
+    padding: 15px 125px;
     display: flex;
     justify-content: space-between;
     align-items: center;
